<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:id="@+id/movie_details_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="@dimen/fragment_movie_details_title_size" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/fragment_movie_details_margin_from_title"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/movie_details_poster"
                android:layout_height="@dimen/grid_posters_cell_layout_height"
                android:layout_width="wrap_content"
                android:contentDescription="@string/fragment_movie_details_poster_content"
                android:src="@drawable/loading" />

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:orientation="vertical">

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/fragment_movie_details_release_date_label"
                        android:textSize="@dimen/label_size" />

                    <TextView
                        android:id="@+id/movie_details_release_date"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="@dimen/label_content_separation"
                        android:layout_marginStart="@dimen/label_content_separation"/>

                </LinearLayout>

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/fragment_movie_details_rating_label"
                        android:textSize="@dimen/label_size" />

                    <TextView
                        android:id="@+id/movie_details_vote_average"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="@dimen/label_content_separation"
                        android:layout_marginStart="@dimen/label_content_separation"/>

                </LinearLayout>

                <Button
                    android:id="@+id/movie_details_mark_favorite"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/fragment_movie_details_fav_button_mark" />

            </LinearLayout>

        </LinearLayout>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/fragment_movie_details_vertical_gap"
            android:gravity="left"
            android:id="@+id/movie_details_overview_label"
            android:textSize="@dimen/label_size"
            android:text="@string/fragment_movie_details_overview" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/movie_details_overview"
            android:layout_marginTop="@dimen/label_content_separation"/>

    </LinearLayout>

</ScrollView>